# vowcue

./: README.md  app.js  import-utils.js  index.html  package-lock.json  package.json  styles.css
.github/workflows/: build-desktop.yml
scripts/: build-single-file.mjs  generate-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: import-utils.test.js
