[package]
name = "vowcue"
version = "0.1.0"
description = "Purpose-built wedding cue playback"
authors = ["VowCue"]
edition = "2021"

[lib]
name = "vowcue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
